<resources>
    <string name="app_name">Room Rental</string>
    <string name="email_hint">Email address</string>
    <string name="username_phone_hint">Phone Number</string>
    <string name="username_hint">User name</string>
    <string name="password_hint">Your password</string>
    <string name="image_welcome">Image Splash</string>
    <string name="txt_sign_up">Not yet register? please sign up</string>
    <string name="btn_register">Register</string>
    <string name="back_login">Already register please log in.</string>
    <string name="login">Login</string>
    <string name="menu_message">New Massage</string>
    <string name="menu_sign_up">Sign Out</string>
    <string name="app_image">todo</string>
    <string name="app_user">User Name</string>
    <string name="app_email">Email@gmail.com</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_welcome">Room Rental</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">username@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sign Out</string>
    <string name="splash">splashscreen</string>
    <string name="btn_show_total_room">My Room</string>
    <string name="btn_room_booked">My Room</string>
    <string name="todo">TODO</string>
    <string name="btn_update_profile">Update</string>
    <string name="btn_cancel_profile">Cancel</string>
    <string name="room_price">Room Price ($) :</string>
    <string name="room_booking">Booking</string>
    <string name="description">input hide show layout</string>
    <string name="txt_building_id">Building Number</string>
    <string name="txt_building_address">Building Location</string>
    <string name="txt_building_name">Building Name</string>
    <string name="app_add_building_text">Add new building information</string>
    <string name="app_add_room_text">Select One Room Image</string>
    <string name="app_add_rooms_text">Add room information</string>
    <string name="txt_room_price">Room Price ($):</string>
    <string name="txt_room_size">Room Size (m * m)</string>
    <string name="txt_room_description">Room Description</string>
    <string name="room_status">Free</string>
    <string name="room_building">Building Name</string>
    <string name="menu_dashboard">Room Owner Dashboard</string>
    <string name="menu_room_list">Available Room</string>
    <string name="menu_room_booked">Booked Room</string>
    <string name="txt_stay_date">Stay Date</string>
    <string name="txt_stay_people">Total People (Limit 4)</string>
    <string name="txt_stay_total_months">Total months of staying</string>
    <string name="txt_leave_date">When will you leave?</string>
</resources>
