<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChatLogActivity"
        android:orientation="vertical">
    <ImageView
            android:id="@+id/imageView_room_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_image"
            android:src="@drawable/web_hi_res_512_square"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/room_price"
                android:textColor="@color/colorBlack"
                android:id="@+id/txt_show_room_price"
                />
    </LinearLayout>
    <Button
            android:id="@+id/btn_booking_room"
            android:layout_width="wrap_content"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:padding="15dp"
            android:text="@string/room_booking"
            android:background="@drawable/button_raduis_background"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>
</LinearLayout>