<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShowRoomActivity">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbarDetail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.499"
            app:layout_constraintHorizontal_bias="0.498"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:orientation="vertical">
        <ImageView
                android:layout_width="250dp"
                android:layout_height="200px"
                app:srcCompat="@mipmap/profile_avatar"
                android:id="@+id/profile_image_detail"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"/>

        <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/txt_profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:text="@string/username_hint"/>
        <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/txt_profile_phone"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/username_phone_hint"/>
        <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/txt_profile_address"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/username_hint"/>
        <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/txt_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:padding="15dp"
                android:text="@string/email_hint"/>

        <EditText
                android:layout_marginTop="5dp"
                android:id="@+id/txt_profile_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_accessibility_black_24dp"
                android:padding="15dp"
                android:text="@string/username_hint"
                android:clickable="false"
                android:enabled="false"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="horizontal">
            <Button
                    android:layout_weight="1"
                    android:layout_margin="20dp"
                    android:text="@string/btn_cancel_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_raduis_background"
                    android:textColor="@color/colorWhite"/>
            <Button
                    android:layout_weight="1"
                    android:text="@string/btn_update_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_raduis_background"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="20dp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>