<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFacebook"
        android:padding="10dp"
        tools:context=".SignupActivity">
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/r_profile_image_roaded"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#ff5a94"
            app:layout_constraintEnd_toEndOf="@+id/r_profile_image"
            app:layout_constraintTop_toTopOf="@+id/r_profile_image"
            app:layout_constraintStart_toStartOf="@+id/r_profile_image"
            app:layout_constraintBottom_toBottomOf="@+id/r_profile_image"/>
    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_stat_name"
            android:id="@+id/r_profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/roaded_image"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="TODO"
            android:layout_marginTop="10dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username_hint"
            android:ems="10"
            android:id="@+id/txt_r_username"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:background="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintTop_toBottomOf="@+id/r_profile_image"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:background="@color/colorWhite"
            android:hint="@string/email_hint"
            android:id="@+id/txt_r_email"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_r_username"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_r_password"
            android:padding="10dp"
            android:background="@color/colorWhite"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_r_email"
            android:hint="@string/password_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
    />
    <Button
            android:text="@string/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btn_register"
            android:layout_marginTop="30dp"
            android:background="@color/colorTwitter"
            app:layout_constraintTop_toBottomOf="@+id/txt_r_password"/>
    <TextView
            android:text="@string/back_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/txt_login"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintVertical_bias="0.273"/>

</android.support.constraint.ConstraintLayout>