<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddRoomActivity"
        android:orientation="vertical">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_add_rooms_text"
                        android:layout_gravity="center"
                        android:textSize="18dp"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:textStyle="bold"
                        android:gravity="center"/>
                <ImageView
                        android:id="@+id/room_profile_image"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/roaded_image"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_menu_camera"/>
                <TextView
                        android:id="@+id/show_select_room_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Select room photo"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="10dp"
                />
                <EditText
                        android:id="@+id/add_room_building"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_building_name"
                        android:inputType="text"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>

                <EditText
                        android:id="@+id/add_room_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_room_price"
                        android:inputType="numberDecimal"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>
                <EditText
                        android:id="@+id/add_room_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_room_size"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>
                <EditText
                        android:id="@+id/add_room_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_room_description"
                        android:layout_margin="5dp"
                        android:padding="10dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp">
                    <Button
                            android:id="@+id/btn_cancel_room"
                            android:layout_weight="1"
                            android:padding="15dp"
                            android:textColor="@color/colorWhite"
                            android:layout_margin="10dp"
                            android:background="@drawable/button_raduis_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Clear"/>
                    <Button
                            android:id="@+id/btn_add_room"
                            android:background="@drawable/button_raduis_background"
                            android:padding="15dp"
                            android:textColor="@color/colorWhite"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Add"/>
                </LinearLayout>
                <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/progress_upload_room"
                />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>