<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".BookingActivity">
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:orientation="vertical">
                <EditText
                            android:id="@+id/stayDate"
                            android:drawableLeft="@drawable/ic_date_range_black_24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:hint="@string/txt_stay_date"
                            android:layout_margin="10dp"
                            android:padding="15dp"
                            />
                <EditText
                        android:id="@+id/leaveDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_date_range_black_24dp"
                        android:hint="@string/txt_leave_date"
                        android:layout_margin="10dp"
                        android:inputType="date"
                        android:padding="15dp"
                />
                <EditText
                        android:id="@+id/total_months_of_stay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:drawableLeft="@drawable/ic_access_time_black_24dp"
                        android:hint="@string/txt_stay_total_months"
                        android:layout_margin="10dp"
                        android:padding="15dp"
                />
                <EditText
                        android:id="@+id/total_people_of_stay"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:hint="@string/txt_stay_people"
                        android:layout_margin="10dp"
                        android:padding="15dp"
                />
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
                    <Button
                            android:id="@+id/btn_back_booking"
                            android:layout_weight="1"
                            android:text="Back"
                            android:textColor="@color/colorWhite"
                            android:background="@drawable/button_raduis_background"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_height="wrap_content"/>
                    <Button
                            android:id="@+id/btn_check_out"
                            android:layout_weight="1"
                            android:text="Check Out"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:textColor="@color/colorWhite"
                            android:background="@drawable/button_raduis_background"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBookingSave"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
</LinearLayout>